--- a/src/PlanIt/GuestsBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/GuestsBundle/Resources/translations/messages.fr.yml
@@ -34,11 +34,15 @@ form:
         firstname: Prénom *
         lastname: Nom *
         mail: Email *
+        category: Catégorie
     answer:
         confirmed: Souhaitez vous participer à l'évenement ?
-
-'Gestion des invités': Guests management
-'Gestion du budget': Budget management
-'Listes de tâches': Todo list
-'Gestion du lieu': Place management
-'Gestion du transport': Transportation management
+    module:
+        invitation: Sur invitation
+        inscription: Sur inscription
+        nb_guests: Nombre maximum d'invités
+        payable: Evénement payant
+    typeguest:
+        category: Nom de la catégorie *
+        mail: Contenu de l'email d'invitation *
+        price: Prix *
