Ajout de listes de taches

--- a/src/PlanIt/GuestsBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/GuestsBundle/Resources/translations/messages.en.yml
@@ -52,3 +52,7 @@ form:
 'Listes de tâches': Todo list
 'Gestion du lieu': Place management
 'Gestion du transport': Transportation management
+
+Virement: Tranfer
+Chèque: Check
+Espèce: Cash
