--- a/src/PlanIt/TodoBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/TodoBundle/Resources/translations/messages.fr.yml
@@ -1,6 +1,9 @@
 add_task: Ajouter une tâche
+add_tasklist: Ajouter une liste de tâches
 print: Imprimer la liste des tâches
 add: Ajouter
 form:
     item:
         label: Tâche *
+    list:
+        name: Nom de la liste *
