Image et contrat à l'ajout de place, affichage image et lien sur contrat

--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
@@ -1,3 +1,4 @@
+place: PLACE MANAGEMENT
 add_place: Add a place
 address: Adress
 capacity: Capacity
@@ -25,3 +26,4 @@ form:
         price: Price
         latitude: Latitude
         longitude: Longitude
+        image: Image
