--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.fr.yml
@@ -12,6 +12,7 @@ contacted: Contacté
 accepted: Accepté
 contract: Contrat
 update_contract: Modifier le contrat
+update_image: Modifier l'image
 update: Modifier
 form:
     contract:
