--- a/src/PlanIt/TransportationBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/TransportationBundle/Resources/translations/messages.en.yml
@@ -4,7 +4,7 @@ form:
     contract:
         file: Select a file *
     module:
-        max_capacity: Maximum capacity
+        max_capacity: Minimum capacity
         price: Maximum price
         time: Maximum travel time	
     transportation:
