--- a/src/PlanIt/TransportationBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/TransportationBundle/Resources/translations/messages.fr.yml
@@ -5,7 +5,7 @@ form:
     contract:
         file: Sélectionner un fichier *
     module:
-        max_capacity: Capacité maximum
+        max_capacity: Capacité minimum
         price: Prix maximum
         time: Temps de trajet maximum
     transportation:
