affichage du bouton "ajouter une catégorie" si pas de dépenses
+ messages « Veuillez ajouter .. »

--- a/src/PlanIt/BudgetBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/BudgetBundle/Resources/translations/messages.en.yml
@@ -10,6 +10,8 @@ add: Add
 add_expense: Add an expense
 add_inflow: Add an inflow
 add_typeexpense: Add an expenditure category
+empty_cat: Please add an expense
+no_typeexpense: Please add an expenditure category
 benefices: BENEFITS PLANNED
 max_budget: LIMIT BUDGET
 item: Item
