--- a/src/PlanIt/UserBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/UserBundle/Resources/translations/messages.fr.yml
@@ -2,3 +2,8 @@ title: EVENEMENTS
 add_event: Ajouter un événement
 update_event: Modifier l'événement
 J: J
+form:
+    registration:
+        firstnames: Prénom
+        lastnames: Nom
+        image: Image
