--- a/src/PlanIt/TodoBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/TodoBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,6 @@
 add_task: Add a task
 add_tasklist: Add a tasks list
-print: Print the task list
+print_task: Print the task list
 add: Add
 form:
     item:
