--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
@@ -1,18 +1,21 @@
 place: PLACE MANAGEMENT
 add_place: Add a place
-address: Adress
-capacity: Capacity
-distance: Distance
-tel: Phone number
-website: Website
-remark: Remark
-state: State
+address: Address : 
+address_placeholder: Please add the address here...
+capacity: Capacity : 
+distance: Distance : 
+tel: Phone number : 
+website: Website : 
+remark: Remark : 
+remark_placeholder: You can add a remark here...
+state: State : 
 refused: Refused
 contacted: Contacted
 tocontact: To contact
 accepted: Accepted
-contract: Contract
+contract: Contract : 
 update_contract: Modify the contract
+add_contract : Add a contract
 update_image: Modify the image
 update: Modify
 form:
