Enlever select quand accepté + trucs pour login

--- a/src/PlanIt/UserBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/UserBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,8 @@
 title: EVENTS
 add_event: Add an event
 update_event: Update the event
+register: Registration
+login: Log In
 J: D
 form:
     registration:
