--- a/src/PlanIt/UserBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/UserBundle/Resources/translations/messages.fr.yml
@@ -1,6 +1,8 @@
 title: EVENEMENTS
 add_event: Ajouter un événement
 update_event: Modifier l'événement
+register: Inscription
+login: Connexion
 J: J
 form:
     registration:
