--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
@@ -18,6 +18,7 @@ update_contract: Modify the contract
 add_contract : Add a contract
 update_image: Modify the image
 update: Modify
+empty_module: There is no places in this module
 form:
     contract:
         file: Select a file *
