mettre des labels à la place des placeholders

--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
@@ -34,3 +34,5 @@ form:
         longitude: Longitude
         image: Image
         state: State *
+        website: Website: 
+        remark : Remark: 
