--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.fr.yml
@@ -35,3 +35,5 @@ form:
         longitude: Longitude
         image: Image
         state: Etat *
+        website: Site web: 
+        remark: Remarque:
