--- a/src/PlanIt/TransportationBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/TransportationBundle/Resources/translations/messages.en.yml
@@ -14,3 +14,6 @@ form:
         price: Price
         image: Image
         state: State *
+        capacity: Capacity
+        website: Website
+        remark: Remark
