--- a/src/PlanIt/TransportationBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/TransportationBundle/Resources/translations/messages.fr.yml
@@ -14,3 +14,6 @@ form:
         price: Prix
         image: Image
         state: Etat *
+        capacity: Capacité
+        website: Site web
+        remark: Remarque
