label un peu plus jolie

--- a/src/PlanIt/GuestsBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/GuestsBundle/Resources/translations/messages.en.yml
@@ -42,6 +42,7 @@ form:
         invitation: By invitation
         inscription: On inscription
         nb_guests: Maximum number of guests: 
+        type_event: Event's type : 
         payable: Paid event: 
     typeguest:
         category: Category Name *
