--- a/src/PlanIt/TransportationBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/TransportationBundle/Resources/translations/messages.fr.yml
@@ -1,7 +1,7 @@
 transportation: GESTION DU TRANSPORT
 add_transportation: Ajouter une compagnie
 empty_module: Il n'y a pas de compagnies de transport dans ce module
-
+remark_placeholder: Vous pouvez ajouter une remarque ici...
 form:
     contract:
         file: Sélectionner un fichier *
