bugs trouvés à 01h55min03sec du matin de la soutenance <3

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -3,3 +3,8 @@ events: Evénements
 account: Mon compte
 help: Aide
 general: Général
+'Gestion des invités': Gestion des invités
+'Gestion du budget': Gestion du budget
+'Listes de tâches': Listes de tâches
+'Gestion du lieu': Gestion du lieu
+'Gestion du transport': Gestion du transport
