bouton image et contract ajout place et transport

--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.en.yml
@@ -13,7 +13,7 @@ refused: Refused
 contacted: Contacted
 tocontact: To contact
 accepted: Accepted
-contract: Contract : 
+contract: Contract  
 update_contract: Modify the contract
 add_contract : Add a contract
 update_image: Modify the image
