--- a/src/PlanIt/PlaceBundle/Resources/translations/messages.fr.yml
+++ b/src/PlanIt/PlaceBundle/Resources/translations/messages.fr.yml
@@ -13,7 +13,7 @@ refused: Refusé
 contacted: Contacté
 tocontact: A contacter
 accepted: Accepté
-contract: Contrat : 
+contract: Contrat  
 update_contract: Modifier le contrat
 add_contract : Ajouter un contrat
 update_image: Modifier l'image
